# ReSDK_A3.vr

./: .gitignore
Documentation/API/: README.md
Documentation/API/host/: GameModes.md
Documentation/Project/: 01_OVERVIEW.md  02_PROJECT_STRUCTURE.md  03_SYNTAX_GUIDE.md  04_MODULE_SYSTEM.md  05_DEBUGGING.md  06_BUILD_DEPLOY.md  07_VERSIONING.md  08_DEVELOPMENT_WORKFLOW.md  09_CODING_STANDARDS.md  10_TROUBLESHOOTING.md  GLOSSARY.md  QUICK_REFERENCE.md
ReMaker/ClientHostVM/: init.sqf
ReMaker/DeployHostVM/: init.sqf
Src/: .cursorrules  CHANGELOGS.txt  SETTINGS.h  config.cpp  fn_init.sqf
Src/.codex/skills/resdk-architecture/: SKILL.md
Src/.codex/skills/resdk-architecture/agents/: openai.yaml
Src/.codex/skills/resdk-architecture/references/: anti-patterns.md  examples.md  implementation-choice.md  integration-checklists.md  layer-boundaries.md  module-shape.md
Src/.codex/skills/resdk-craft-configs/: SKILL.md
Src/.codex/skills/resdk-craft-configs/agents/: openai.yaml
Src/.codex/skills/resdk-craft-configs/references/: craft-authoring-checklist.md  craft-schema.md
Src/.codex/skills/resdk-dsl/: SKILL.md
Src/.codex/skills/resdk-dsl/agents/: openai.yaml
Src/.codex/skills/resdk-dsl/references/: docs-routing.md  dsl-foundation.md  generated-and-legacy.md  subsystems.md
Src/.codex/skills/resdk-editor-workflows/: SKILL.md
Src/.codex/skills/resdk-editor-workflows/agents/: openai.yaml
Src/.codex/skills/resdk-editor-workflows/references/: editor-basics.md  editor-tools-and-simulation.md  renode-and-generated-assets.md
Src/.codex/skills/resdk-gameobject-authoring/: SKILL.md
Src/.codex/skills/resdk-gameobject-authoring/agents/: openai.yaml
Src/.codex/skills/resdk-gameobject-authoring/references/: authoring-checklist.md  object-kinds-and-placement.md
Src/.codex/skills/resdk-loot-configs/: SKILL.md
Src/.codex/skills/resdk-loot-configs/agents/: openai.yaml
Src/.codex/skills/resdk-loot-configs/references/: loot-schema.md  loot-testing-and-checklist.md
Src/.codex/skills/resdk-tests-validation/: SKILL.md
Src/.codex/skills/resdk-tests-validation/agents/: openai.yaml
Src/.codex/skills/resdk-tests-validation/references/: legacy-unit-tests.md  validation-matrix.md
Src/.codex/skills/resdk-ui/: SKILL.md
Src/.codex/skills/resdk-ui/agents/: openai.yaml
Src/.codex/skills/resdk-ui/references/: examples.md  netdisplays.md  theming-input-and-interaction.md  ui-lifecycle-and-state.md  widget-system-basics.md
Src/Editor/Core/: Core_init.sqf  Core_settings_preInit.sqf
Src/Editor/GameObjectsLibrary/: GOLib_Layers.sqf  GOLib_objectManager.sqf
Src/Editor/MapsManager/: MM_CONTENT.sqf
Src/Editor/SystemTools/: SystemTools_init.sqf  v2exporter.md  v2exporter.sqf  v2mapexporter.md
Src/Editor/Widgets/: LayersUtility.sqf  Menu_functions.sqf  Widget_ContextMenu.sqf  Widget_WinApi.sqf  Widget_init.sqf
Src/RVEngine/src/plugins/: CMakeLists.txt
Src/RVEngine/src/plugins/js_host/: CMakeLists.txt  js_engine.cpp  js_engine.hpp  main.cpp  sqf_bindings.cpp  sqf_bindings.hpp  type_conversion.cpp  type_conversion.hpp
Src/RVEngine/src/plugins/js_host/extension_src/: package-lock.json  package.json
Src/RVEngine/src/plugins/js_host/extension_src/src/: extension.ts  quickjsDebug.ts  sourcemapSession.ts
Src/RVEngine/src/plugins/js_host/quickjs-master/: quickjs-debugger-transport-win.c  quickjs-debugger.c  quickjs-debugger.h  quickjs.c
Src/RVEngine/src/plugins/python_host/: CMakeLists.txt  README.md  main.cpp  python_engine.cpp  python_engine.hpp  sqf_bindings.cpp  sqf_bindings.hpp  type_conversion.cpp  type_conversion.hpp
Src/RVEngine/src/plugins/v8_host/: CMakeLists.txt  main.cpp  v8_engine.cpp  v8_engine.hpp  v8_inspector_client.cpp  v8_inspector_client.hpp
Src/ReBridge/: ReBridge_interface.sqf
Src/Scripts/: HostVM.cs  HostVm.reproj
Src/client/Rendering/: Rendering_init.sqf
Src/client/VoiceSystem/: VoiceSystem_Control.sqf  VoiceSystem_init.sqf  VoiceSystem_publicInterface.sqf
Src/host/: precompiled.sqf
Src/host/ClientManager/: ClientManager.h  ClientManager.sqf  CommandsExec.sqf  PreAwaitStruct.sqf
Src/host/ClientManager/cmds/: EditorAndDebug.sqf
Src/host/Database/SQLite/: SQLite.h  SQLite_init.sqf
Src/host/Discord/: Discord.sqf  ServerManager.sqf
Src/host/GameModes/: scripted_loader.hpp
Src/host/GameModes/Detective/: DetectiveModeRoles.sqf
Src/host/GameModes/Dirtpit/: BaseGamemode.sqf  GM_TVT.sqf  StationRoles.sqf
Src/host/GameModes/GMTruba/: GMTruba_roles.sqf
Src/host/GameModes/Hunt/: HuntRoles.sqf
Src/host/GameModes/Okopovo/: Templates.sqf
Src/host/GameModes/Prey/: PreyRoles.sqf
Src/host/GameModes/Saloon/: GM_Saloon.sqf  SaloonRoles.sqf
Src/host/GameObjects/Decors/: BigWalls.sqf  Houses.sqf  Ruins.sqf
Src/host/GameObjects/Items/Clothes/: Helmets.sqf
Src/host/GameObjects/Items/Containers/: Backpacks.sqf
Src/host/GameObjects/Mobs/: Mob_Tasks.sqf
Src/host/GameObjects/Structures/Constructions/: DirtPiles.sqf  Garbages.sqf  Houses.sqf  Pipes.sqf  Poles.sqf  StepsLadders.sqf  Stones.sqf  Walls.sqf
Src/host/GameObjects/Structures/Containers/: Tech.sqf
Src/host/GameObjects/Structures/Furniture/: Chairs.sqf
Src/host/GameObjects/Structures/Interiors/: InteractibleInteriors.sqf
Src/host/GameObjects/Structures/Lighting/: Campfires.sqf
Src/host/LootSystem/Collections/BasicLoot/: CityCloth.yml
Src/host/MapManager/Maps/: Army.sqf  GryaznoyamskV2.sqf  Theatre.sqf  Truba.sqf  detective.sqf  sp_guide.sqf
Src/host/MapManager/Maps old_editor/: Minimap.map
Src/host/Tools/EditorWorkspaceDebug/: InternalImpl.sqf
Src/host/Tools/HostVM/: cba_hostvm_getCode.sqf  cba_hostvm_init.sqf  cba_hostvm_preinit.sqf  hostvm_init.sqf
